fix alignment of header and footer when there is no scroll in the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,10 @@ header{
   padding-left: 120px;
 }
 
+.header_no_scroll{
+  margin-right: 25px;
+}
+
 #title{
   font-family: Lato, sans-serif;
   color: #FFFFFF;
@@ -174,16 +178,25 @@ header h3{
 }
 
 /* footer */
-.footer_col_band{
+footer{
+  display: flex;
   background-color: #000065;
   height: 100px;
   margin: 10px 10px 10px 165px;
   padding: 10px 0;
+  /* align-content: center; */
 }
 
-.car_garage{
-  /* margin: 196px 10px 10px 165px; */
-  margin: 207px 10px 10px 165px;
+.footer_col_band{
+  width: 100%;
+  align-content: center;
+}
+
+.footer_fixed{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 15px;
 }
 
 footer h2{
